# Cyber-AutoAgent

./: .dockerignore  .env.example  .gitignore  .pylintrc  CLAUDE.md  Dockerfile  LICENSE  MIGRATION_SUMMARY.md  README.md  blog_post.md  cyber_agent.py  docker-compose.yml  linkedin_post.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude.yml  pr-checks.yml  pr-review.yml  pylint.yml  swe-agent.yml
benchmark_harness/: GETTING_STARTED.md  Makefile  README.md  all-flag-secrets.yaml  config.yaml  ctf_endpoints_internal.json  ctf_endpoints_internal.yaml
benchmark_harness/agent_runner/: .env.bedrock.sample  Makefile  README.md  config.yaml  list_benchmarks.py  run_agents.py  run_agents.sh  view_results.py
benchmark_harness/containers/: build_all_benchmarks.sh  build_info.json  build_sample.sh
benchmark_harness/containers/XBEN-001-24/db/: Dockerfile
benchmark_harness/containers/XBEN-001-24/idor_broken_authz_trading_platform/: Dockerfile
benchmark_harness/containers/XBEN-002-24/db/: Dockerfile
benchmark_harness/containers/XBEN-002-24/idor_indirect_trading_platform/: Dockerfile
benchmark_harness/containers/XBEN-003-24/db/: Dockerfile  Dockerfile.bak
benchmark_harness/containers/XBEN-003-24/idor_custom_authn_header_trading_platform/: Dockerfile
benchmark_harness/containers/XBEN-004-24/web/: Dockerfile
benchmark_harness/containers/XBEN-005-24/app/: Dockerfile
benchmark_harness/containers/XBEN-006-24/app/: Dockerfile
benchmark_harness/containers/XBEN-008-24/web/: Dockerfile  app.py  phantomjs.py
benchmark_harness/containers/XBEN-009-24/web/: Dockerfile
benchmark_harness/containers/XBEN-010-24/web/: Dockerfile  app.py
benchmark_harness/containers/XBEN-011-24/web/: Dockerfile  app.py
benchmark_harness/containers/XBEN-012-24/web/: Dockerfile  app.py
benchmark_harness/containers/XBEN-013-24/web/: Dockerfile  app.py
benchmark_harness/containers/XBEN-014-24/web/: Dockerfile
benchmark_harness/containers/caa-agent/: Dockerfile  README.md  build.sh  entrypoint.sh
benchmark_harness/deployments/: all-benchmarks-corrected.yaml  generate_all_deployments.py
benchmark_harness/infrastructure/: app.py  cdk.json
benchmark_harness/scripts/: build_all_containers.sh  deploy_benchmarks.sh  deploy_infrastructure.sh  validate_deployment.sh
benchmark_testing/: README.md  summary_20250629_174006.json
benchmark_testing/CDK/: app.py  simple_stack.py
benchmark_testing/CDK/caa_test_harness/: caa_test_harness_stack.py
benchmark_testing/scripts/: clean_environment.sh  run_benchmarks.py  setup_environment.sh
cyber-autoagent-api/: Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
cyber-autoagent-api/api/: main.py  models.py
cyber-autoagent-api/api/db/: init_db.py  models.py  session.py
cyber-autoagent-api/common/: storage.py
cyber-autoagent-api/worker/: agent_runner.py  worker.py
data/kb/: README.md  build_kb.py  manifest.json
data/kb/content/: actors.jsonl  cves.jsonl  payloads.jsonl  techniques.jsonl
data/kb/index/: .gitkeep
docker/: .env.oauth  Dockerfile  README-OAUTH.md  docker-compose.yml  test-direct-container.py  test-handler-flow.py
docs/: README.md  anthropic-models.md  architecture.md  context_management.md  deployment.md  memory.md  observability-evaluation.md  observability.md  prompt_management.md  prompt_optimizer.md  terminal-frontend.md  user-instructions.md
experimentation/: agent_test.py  memory_test.py
repl_state/: repl_state.pkl
scripts/: extract_evidence.py
src/: __init__.py  cyberautoagent.py
src/modules/: __init__.py  agent.py  agent_factory.py  agent_handlers.py  config.py  environment.py  evaluation.py  memory_tools.py  model_config.py  system_prompts.py  utils.py
src/modules/agents/: __init__.py  cyber_autoagent.py  report_agent.py
src/modules/auth/: README.md  __init__.py  anthropic_oauth.py  oauth_storage.py
src/modules/config/: README.md  __init__.py  environment.py  logger_factory.py  manager.py  model_capabilities.py  types.py
src/modules/evaluation/: __init__.py  evaluation.py  manager.py  trace_parser.py
src/modules/handlers/: __init__.py  base.py  callback.py  conversation_budget.py  display.py  output_interceptor.py  prompt_rebuild_hook.py  report_generator.py  reporting.py  reporting.py.backup  sdk_native_handler.py  tool_router.py  tools.py  utils.py
src/modules/interfaces/: README.md
src/modules/models/: __init__.py  anthropic_oauth_fallback.py  anthropic_oauth_model.py
src/modules/operation_plugins/: README.md
src/modules/prompts/: README.md  __init__.py  factory.py  manager.py  module_loader.py  report.py  system.py
src/modules/tools/: __init__.py  browser.py  kb.py  list_mcp_tools.py  mcp.py  memory.py  prompt_optimizer.py  report_builder.py  report_generator.py
src/modules/utils/: __init__.py  greetings.py  validation.py
tests/: conftest.py  test_agent.py  test_agent_factory.py  test_agent_handlers.py  test_agent_handlers.py.disabled  test_agent_providers.py  test_anthropic_oauth.py  test_anthropic_oauth_fallback.py  test_anthropic_oauth_model.py  test_automatic_optimization.py  test_browser_utils.py  test_capabilities_precedence.py  test_cli_integration.py  test_config.py  test_context_utils.py  test_conversation_manager.py  test_conversation_manager_integration.py  test_conversation_manager_shared.py  test_emitters.py  test_emoji_sanitization.py  test_greetings.py  test_hitl_components.py  test_hitl_feedback_injection.py  test_hitl_hook_manual.py  test_hitl_hook_provider.py  test_hitl_integration.py  test_hitl_stdin_handler.py  test_logger_factory.py  test_memory_aware_agent_integration.py  test_memory_aware_prompts.py  test_memory_check_alt_path.py  test_memory_path_integration.py  test_memory_plan_format.py  test_message_structure.py  test_model_aliases.py  test_model_config.py  test_models_dev_client.py  test_oauth_storage.py  test_output_display_integration.py  test_output_interception_toggle.py  (+17 more)
(+469 files in other folders)
