[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber-autoagent"
version = "0.0.1"
description = "Autonomous cybersecurity assessment tool powered by AWS Bedrock and Strands framework"
readme = "README.md"
authors = [
    {name = "Cyber-AutoAgent Team", email = "aaron.weston.brown@gmail.com"}
]
license = {text = "MIT"}
keywords = ["cybersecurity", "penetration-testing", "autonomous", "ai-agent", "security-assessment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Environment :: Console"
]
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=0.1.6",
    "strands-agents-tools>=0.1.4", 
    "mem0ai",
    "boto3",
    "botocore",
    "faiss-cpu"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy"
]

[project.urls]
Homepage = "https://github.com/cyber-autoagent/cyber-autoagent"
Repository = "https://github.com/cyber-autoagent/cyber-autoagent"
Documentation = "https://github.com/cyber-autoagent/cyber-autoagent#readme"
"Bug Tracker" = "https://github.com/cyber-autoagent/cyber-autoagent/issues"

[project.scripts]
cyber-autoagent = "cyberautoagent:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing"
]