[tool.poetry]
name = "cyber-autoagent-api"
version = "0.1.0"
description = "Cyber-AutoAgent API scaffold"
authors = ["Your Name <you@example.com>"]
packages = [
    {include = "api"},
    {include = "worker"},
    {include = "common"}
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.6"
SQLAlchemy = "^2.0"
psycopg2-binary = "^2.9"
celery = "^5.3"
redis = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
